feat(db): add cashless payment method and QRIS support
